- Feature: Added support for tessellation control shader (named "hull shader" in DirectX 11) within "PLRenderer"
- Feature: Added support for tessellation evaluation shader (named "domain shader" in DirectX 11) within "PLRenderer"
- Feature: Added "55RendererTessellation"-sample
- Bugfix (ID: 3502066): "PLGraphics::Color4::IsValid()" alpha-check was invalid


Changes in PixelLight 0.9.11-R1 (released on February 23, 2012)
- Feature: Beside "Scene" and "Script", "PLViewer" is now also able to load in "Mesh", "Material" and "Image" (= texture)
- Feature: Within the PLFrontendQt adapter project, there's now an interactive realtime RTTI browsing GUI
- Feature: Added dock widgets to the PLFrontendQt adapter project which can be instanced and used via the PixelLight RTTI system in a generic way
- Feature: Added Qt based PixelLight viewer named PLViewerQt which is similar to the minimalistic PLViewer, but more advanced and with support for the PLFrontendQt dock widgets
- Feature: "PLRenderer::VertexBuffer": Added support for the "half" data type (16 bit floating point)
- Feature: "PLRenderer::VertexBuffer": Added generic comfort methods "GetFloat()" and "SetFloat()"
- Feature: Implemented "PLCompositing::SRPBackgroundColorGradient" which can be used for a simple color gradient background
- Feature: It's now possible to create RTTI class instances via script
- Feature: Added position, rotation and scale transform gimzo scene node modifiers
- Feature: Added "Fast Approximate Anti-Aliasing" (FXAA) support within "PLCompositing"
- Feature: Added volume texture compression (VTC, "GL_NV_texture_compression_vtc"-extension) support
- Feature request ID: 3486884: Added "PLCore::MemoryManager::Move()"
- Feature (Windows): Added support for "LuaJIT", a Just-in-time (JIT) compiler for Lua
- Change (Windows): Updated Qt from "4.7.0" to "4.8.0"
- Change: Updated from "Cg Toolkit 3.0 - February 2011" to "Cg Toolkit 3.1 - February 2012"