@@ -1,4 +1,3 @@
-
 /*********************************************************\
  *  File: Keyboard.cpp                                   *
  *
@@ -33,6 +32,12 @@
 //[-------------------------------------------------------]
 using namespace PLCore;
 namespace PLInput {
+
+
+//[-------------------------------------------------------]
+//[ Class implementation                                  ]
+//[-------------------------------------------------------]
+pl_implement_class(Keyboard)
 
 
 //[-------------------------------------------------------]
