@@ -5,6 +5,7 @@ Changes in PixelLight 0.9.12-R1 (not yet released)
 - Feature: Added support for tessellation evaluation shader (named "domain shader" in DirectX 11) within "PLRenderer"
 - Feature: Added "55RendererTessellation"-sample
 - Bugfix (ID: 3502066): "PLGraphics::Color4::IsValid()" alpha-check was invalid
+- Bugfix (ID: 3512436): "pl_implement_class(Keyboard)" was missing within "PLInput"
 
 
 Changes in PixelLight 0.9.11-R1 (released on February 23, 2012)
